--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -7,4 +7,4 @@ jobs:
       - uses: actions/checkout@v3
       - name: Format code with black
         run: |
-          black .
+          poetry run black .
