--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -4,7 +4,12 @@ jobs:
   format:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out Repository
+        uses: actions/checkout@v3
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+      - name: Install dependencies
+        run: poetry install
       - name: Format code with black
         run: |
           poetry run black .
