--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -8,7 +8,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Poetry
         uses: snok/install-poetry@v1
-      - name: Install dependencies
+      - name: Set Up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '^3.11'
+          cache: 'poetry' # caching pip dependencies
+      - name: Install dependencies with poetry
         run: poetry install
       - name: Format code with black
         run: |
