--- a/.github/workflows/reformat.yml
+++ b/.github/workflows/reformat.yml
@@ -1,5 +1,7 @@
 name: Format code
-on: [push]
+on:
+  push:
+    branches: ["main"]
 jobs:
   format:
     runs-on: ubuntu-latest
@@ -17,4 +19,4 @@ jobs:
         run: poetry install
       - name: Format code with black
         run: |
-          poetry run black .
+          poetry run black . --check --verbose
