--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
+pylint = "^2.17.4"
 
 [build-system]
 requires = ["poetry-core"]
