--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,11 +17,14 @@ repos:
         language_version: python3.11
         stages: [ commit, push ]
 
-  - repo: https://github.com/pycqa/pylint
-    rev: pylint-3.0.0a1
+  - repo: local
     hooks:
       - id: pylint
-        stages: [ commit, push ]
+        name: pylint
+        entry: pylint
+        language: system
+        types:
+          - python
 
 default_stages:
   - commit
