--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,9 +2,12 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    - id: mixed-line-ending
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: mixed-line-ending
+      - id: detect-private-key
+      - id: fix-encoding-pragma
+      - id: name-tests-test
 
   - repo: https://github.com/psf/black
     rev: 23.3.0
