--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,6 @@ name: Release
 on:
   push:
     branches:
-      - main
       - develop
   pull_request:
 
@@ -27,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: format
     concurrency: release
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/main'
     steps:
       - name: Check out Repository
         uses: actions/checkout@v3
