--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,8 @@ name: Release
 on:
   push:
     branches:
+      - main
       - develop
-  pull_request:
-
 jobs:
   format:
     runs-on: ubuntu-latest
