--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,18 +1,15 @@
-name: Release
+name: Format
 on:
-  pull_request:
-    types: closed
+  push:
     branches:
       - main
+      - develop
 jobs:
-  release:
+  format:
     runs-on: ubuntu-latest
-    concurrency: release
     steps:
       - name: Check out Repository
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - name: Install Poetry
         uses: snok/install-poetry@v1
       - name: Set Up Python
@@ -21,10 +18,6 @@ jobs:
           python-version: '3.9.17'
           cache: 'poetry' # caching pip dependencies
       - name: Install dependencies with poetry
-        run: poetry install --only semver
-      - name: Python Semantic Release
-        uses: relekang/python-semantic-release@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          repository_username: __token__
-          repository_password: ${{ secrets.PYPI_TOKEN }}
+        run: poetry install --without semver
+      - name: pre-commit formatter
+        uses: pre-commit/action@v3.0.0
