--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,4 @@ build-backend = "poetry.core.masonry.api"
 version_variable = "src/__init__.py:__version__"
 branch = "main"
 upload_to_repository = false
-upload_to_release = true
+upload_to_release = false
