--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Merge main back to develop
         run: |
           git fetch --unshallow
-          git checkout dev
+          git checkout develop
           git pull
-          git merge --no-ff main -m "Auto-merge main back to dev"
+          git merge --no-ff main -m "Auto-merge main back to develop"
           git push
