--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -4,12 +4,16 @@ on:
     branches:
       - main
       - develop
+    pull_request:
 jobs:
   format:
+    needs: commitlint
     runs-on: ubuntu-latest
     steps:
       - name: Check out Repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Install Poetry
         uses: snok/install-poetry@v1
       - name: Set Up Python
