--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: v9.5.0
     hooks:
       - id: commitlint
-        stages: [commit-msg, push]
+        stages: [commit-msg]
         additional_dependencies: ['@commitlint/config-conventional']
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
