--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           images: |
             nelsi11120/tinta
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -33,3 +37,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
