--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -11,16 +11,6 @@ jobs:
     steps:
       - name: Check out Repository
         uses: actions/checkout@v3
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: |
-            nelsi11120/tinta
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -36,5 +26,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ github.event.release.tag_name }}
+          labels: ${{ github.event.release.tag_name }}
