--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -11,6 +11,12 @@ jobs:
     steps:
       - name: Check out Repository
         uses: actions/checkout@v3
+      - name: Get tag
+        id: tag
+        uses: dawidd6/action-get-tag@v1
+        with:
+          # Optionally strip `v` prefix
+          strip_v: true
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -26,5 +32,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ github.event.release.tag_name }}
-          labels: ${{ github.event.release.tag_name }}
+          tags: ${{ steps.tag.outputs.tag }}
+          labels: ${{ steps.tag.outputs.tag }}
