--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -1,27 +1,32 @@
 name: Build and push image
 on:
-  # triggers only when the release workflow succeeded on the main branch
-  workflow_run:
-    workflows: [ "Release" ]
-    types: completed
-    branches: [ main ]
+  push:
+    branch:
+      - 'main'
+    tags:
+      - 'v*'
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Check out Repository
         uses: actions/checkout@v3
-      - name: Get tag
-        id: tag
-        uses: dawidd6/action-get-tag@v1
-        with:
-          # Optionally strip `v` prefix
-          strip_v: true
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Extract metadata for the Docker image
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            nelsi11120/tinta
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Setup Docker Buildx
@@ -32,5 +37,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.tag.outputs.tag }}
-          labels: ${{ steps.tag.outputs.tag }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
