--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -1,10 +1,8 @@
 name: Build and push image
 on:
   push:
-    branch:
-      - 'main'
     tags:
-      - 'v*'
+      - '*'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,6 +14,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: GitHub Tag Name example
+        run: |
+          echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
+          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
       - name: Extract metadata for the Docker image
         id: meta
         uses: docker/metadata-action@v4
