--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,8 +38,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Set Git Config
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "Github Actions"
+          git config --local user.email "nelson.antunes994@gmail.com"
+          git config --local user.name "nelsi11120"
       - name: Merge main back to develop
         run: |
           git fetch --unshallow
