--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          persist-credentials: false
+          token: ${{ secrets.RELEASE_TOKEN }}
       - name: Install Poetry
         uses: snok/install-poetry@v1
       - name: Set Up Python
@@ -27,4 +29,3 @@ jobs:
         uses: relekang/python-semantic-release@master
         with:
           github_token: ${{ secrets.RELEASE_TOKEN }}
-          repository_username: __token__
