--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   run_if:
     if: github.event.pull_request.base.ref != 'main'
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - run: echo "The head of this PR starts with 'develop/'"
   commitlint:
