chore: pylint local hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,15 @@ repos:
         stages: [ commit, push ]
         verbose: true
 
+  - repo: local
+    hooks:
+    -   id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        types: [python]
+        require_serial: true
+        stages: [ commit, push ]
 
 default_stages:
   - commit
