--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,8 @@ repos:
     rev: v9.5.0
     hooks:
       - id: commitlint
-        stages: [ commit-msg ]
-        additional_dependencies: [ '@commitlint/config-conventional' ]
+        stages: [commit-msg]
+        additional_dependencies: ['@commitlint/config-conventional']
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -28,14 +28,10 @@ repos:
         stages: [ commit, push ]
         verbose: true
 
-  - repo: local
+  - repo: https://github.com/pycqa/pylint
+    rev: pylint-3.0.0a1
     hooks:
-    -   id: pylint
-        name: pylint
-        entry: pylint
-        language: system
-        types: [python]
-        require_serial: true
+      - id: pylint
         stages: [ commit, push ]
 
 default_stages:
