--- a/kubernetes/deployment-tinta.yaml
+++ b/kubernetes/deployment-tinta.yaml
@@ -17,4 +17,4 @@ spec:
     spec:
       containers:
       - name: tinta
-        image: nelsi11120/tinta:0.10.1
+        image: nelsi11120/tinta:0.10.1 # {"$imagepolicy": "flux-system:tinta"}
