--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,14 @@ readme = "README.md"
 python = "^3.9"
 gradio = "3.32.0"
 poethepoet = "^0.20.0"
+mlflow = "^2.4.1"
 
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 pylint = "^2.17.4"
 pre-commit = "^3.3.2"
-
+jupyter = "^1.0.0"
 
 [tool.poetry.group.semver.dependencies]
 python-semantic-release = "^7.34.3"
